@@ -8,47 +8,48 @@ public class Juego {
     private final List<CartaJuego> baraja; // Baraja completa de cartas.
     private final Jugador jugador1; // Primer jugador.
     private final Jugador jugador2; // Segundo jugador.
-    private final EstiloDeJuego estiloDeJuego;
+    private final EstiloDeJuego estiloDeJuego; // Configuración para mostrar cartas estilizadas.
 
+    // Constructor que inicializa el juego.
     public Juego(String nombreJugador1, String nombreJugador2, EstiloDeJuego estiloDeJuego) {
-        this.baraja = CartaJuego.crearBaraja(); // Crea una baraja completa.
+        this.baraja = CartaJuego.crearBaraja(); // Genera una baraja estándar de 52 cartas.
         Collections.shuffle(baraja); // Mezcla las cartas para garantizar aleatoriedad.
         this.jugador1 = new Jugador(nombreJugador1); // Inicializa el primer jugador.
         this.jugador2 = new Jugador(nombreJugador2); // Inicializa el segundo jugador.
-        this.estiloDeJuego = estiloDeJuego;
+        this.estiloDeJuego = estiloDeJuego; // Estilo de juego (puede incluir visualización personalizada).
     }
 
     // Método que reparte 5 cartas a cada jugador.
     public void repartirCartas() {
         for (int i = 0; i < 5; i++) {
-            jugador1.recibirCarta(baraja.removeFirst()); // Da una carta al jugador 1.
-            jugador2.recibirCarta(baraja.removeFirst()); // Da una carta al jugador 2.
+            jugador1.recibirCarta(baraja.remove(0)); // Da una carta al jugador 1.
+            jugador2.recibirCarta(baraja.remove(0)); // Da una carta al jugador 2.
         }
     }
 
-    // Método principal del juego que maneja turnos y lógica de victoria.
+    // Método principal que contiene la lógica del juego.
     public void jugar() {
         Scanner scanner = new Scanner(System.in);
 
         // Turno del jugador 1
-        ConsolaStyles.printTitle("Cartas de " + jugador1.getNombre());
-        jugador1.mostrarCartas(estiloDeJuego);
-        if (verificarGanador(jugador1)) { // Verifica si el jugador 1 gana.
+        ConsolaStyles.printTitle("Turno de " + jugador1.getNombre());
+        jugador1.mostrarCartas(estiloDeJuego); // Muestra las cartas del jugador.
+        if (verificarGanador(jugador1)) { // Verifica si el jugador tiene 4 cartas iguales.
             System.out.println(jugador1.getNombre() + " gana con 4 cartas iguales!");
             return;
         }
-        realizarCambio(jugador1, scanner); // Permite cambiar cartas.
+        realizarCambio(jugador1, scanner); // Permite al jugador cambiar cartas.
         if (verificarGanador(jugador1)) {
             System.out.println(jugador1.getNombre() + " gana con 4 cartas iguales!");
             return;
         }
-        usarCartaTrampa(jugador1, scanner); // Permite usar carta trampa.
+        usarCartaTrampa(jugador1, scanner); // Permite usar una carta trampa.
         if (verificarGanador(jugador1)) {
             System.out.println(jugador1.getNombre() + " gana con 4 cartas iguales!");
             return;
         }
 
-        // Turno del jugador 2
+        // Turno del jugador 2 (similar al del jugador 1).
         ConsolaStyles.printTitle("Turno de " + jugador2.getNombre());
         jugador2.mostrarCartas(estiloDeJuego);
         if (verificarGanador(jugador2)) {
@@ -66,34 +67,31 @@ public class Juego {
             return;
         }
 
-        // Determina el ganador con base en los puntos.
+        // Determina el ganador basado en los puntos obtenidos.
         Puntos puntosJugador1 = calcularPuntos(jugador1);
         Puntos puntosJugador2 = calcularPuntos(jugador2);
-        ConsolaStyles.printTitle("Cartas");
-        System.out.println("[" + jugador1.getNombre() + "]:");
-        jugador1.mostrarCartas(estiloDeJuego, 11);
-        System.out.println("[" + jugador2.getNombre() + "]:");
-        jugador2.mostrarCartas(estiloDeJuego, 11);
-        ConsolaStyles.printTitle("Puntos");
-        System.out.println(jugador1.getNombre() + ":");
-        System.out.println(puntosJugador1);
-        System.out.println(jugador2.getNombre() + ":");
-        System.out.println(puntosJugador2);
 
-        // Determina el resultado final del juego.
+        ConsolaStyles.printTitle("Puntos Finales");
+        System.out.println(jugador1.getNombre() + ": " + puntosJugador1);
+        System.out.println(jugador2.getNombre() + ": " + puntosJugador2);
+
+        // Declara el ganador final.
         if (puntosJugador1.getPuntosTotales() > puntosJugador2.getPuntosTotales()) {
-            System.out.println(jugador1.getNombre() + " gana con " + puntosJugador1 + " puntos!");
+            System.out.println(jugador1.getNombre() + " gana con " + puntosJugador1.getPuntosTotales() + " puntos!");
         } else if (puntosJugador2.getPuntosTotales() > puntosJugador1.getPuntosTotales()) {
-            System.out.println(jugador2.getNombre() + " gana con " + puntosJugador2 + " puntos!");
+            System.out.println(jugador2.getNombre() + " gana con " + puntosJugador2.getPuntosTotales() + " puntos!");
+        } else {
+            System.out.println("¡Es un empate!");
         }
     }
 
-    // Verifica si un jugador tiene 4 cartas iguales.
+    // Verifica si un jugador tiene 4 cartas con el mismo valor.
     private boolean verificarGanador(Jugador jugador) {
         Map<String, Integer> conteoValores = new HashMap<>();
         for (Carta carta : jugador.getMano()) {
             conteoValores.put(carta.getValor(), conteoValores.getOrDefault(carta.getValor(), 0) + 1);
         }
+        // Si alguna carta tiene un conteo de 4, el jugador gana.
         for (int conteo : conteoValores.values()) {
             if (conteo >= 4) {
                 return true;
@@ -102,7 +100,7 @@ public class Juego {
         return false;
     }
 
-    // Método para obtener un número válido dentro de un rango específico.
+    // Solicita al usuario un número válido dentro de un rango específico.
     private int obtenerNumeroValido(Scanner scanner, String mensaje) {
         int numero = -1;
         while (numero < 0 || numero > 4) {
@@ -110,32 +108,31 @@ public class Juego {
             if (scanner.hasNextInt()) {
                 numero = scanner.nextInt();
                 if (numero < 0 || numero > 4) {
-                    System.out.println("Número inválido. Por favor, ingresa un número entre " + 0 + " y " + 4 + ".");
+                    System.out.println("Número inválido. Por favor, ingresa un número entre 0 y 4.");
                 }
             } else {
-                System.out.println("Entrada inválida. Por favor, ingresa un número entre " + 0 + " y " + 4 + ".");
-                scanner.next(); // Clear the invalid input
+                System.out.println("Entrada inválida. Por favor, ingresa un número válido.");
+                scanner.next(); // Limpia la entrada inválida.
             }
         }
         return numero;
     }
 
-    // Permite a un jugador cambiar cartas.
+    // Permite a un jugador cambiar cartas por nuevas de la baraja.
     private void realizarCambio(Jugador jugador, Scanner scanner) {
         int numCambios = obtenerNumeroValido(scanner, jugador.getNombre() + ", ¿Cuántas cartas deseas cambiar? (0-4)");
 
         List<Integer> indices = new ArrayList<>();
         for (int i = 0; i < numCambios; i++) {
-            int indice = obtenerNumeroValido(scanner, "[" + (i + 1) + "/" + numCambios + "] Ingresa el índice de la carta a cambiar (0-4)");
+            int indice = obtenerNumeroValido(scanner, "Ingresa el índice de la carta a cambiar (0-4):");
             indices.add(indice);
         }
 
         List<Carta> nuevasCartas = new ArrayList<>();
         for (int i = 0; i < numCambios; i++) {
-            nuevasCartas.add(baraja.removeFirst());
+            nuevasCartas.add(baraja.remove(0)); // Obtiene nuevas cartas de la baraja.
         }
-        jugador.cambiarCartas(nuevasCartas, indices);
-        jugador.mostrarCartas(estiloDeJuego);
+        jugador.cambiarCartas(nuevasCartas, indices); // Reemplaza las cartas seleccionadas.
     }
 
     // Permite a un jugador usar una carta trampa.
@@ -145,28 +142,29 @@ public class Juego {
         if (respuesta.equalsIgnoreCase("s")) {
             System.out.println("Ingresa el índice de la carta a cambiar por la carta trampa (0-4):");
             int indice = scanner.nextInt();
-            CartaTrampa cartaTrampa = CartaTrampa.scanCartaTrampa();
-            jugador.usarCartaTrampa(cartaTrampa, indice);
+            CartaTrampa cartaTrampa = CartaTrampa.scanCartaTrampa(); // Crea una carta trampa desde la entrada del usuario.
+            jugador.usarCartaTrampa(cartaTrampa, indice); // Usa la carta trampa en la posición especificada.
         }
-        jugador.mostrarCartas(estiloDeJuego);
     }
 
-    // Calcula los puntos de un jugador con base en las cartas en su mano.
+    // Calcula los puntos de un jugador según sus cartas.
     private Puntos calcularPuntos(Jugador jugador) {
         Map<String, Integer> conteoValores = new HashMap<>();
         Map<String, Integer> conteoFamilias = new HashMap<>();
+
+        // Cuenta la cantidad de cartas por valor y familia.
         for (Carta carta : jugador.getMano()) {
             conteoValores.put(carta.getValor(), conteoValores.getOrDefault(carta.getValor(), 0) + 1);
             conteoFamilias.put(carta.getFamilia().getNombre(), conteoFamilias.getOrDefault(carta.getFamilia().getNombre(), 0) + 1);
         }
 
-        Puntos puntos = getPuntos(conteoValores, conteoFamilias);
-        System.out.println(puntos); // Print the points details
-        return puntos;
+        return getPuntos(conteoValores, conteoFamilias); // Calcula los puntos.
     }
 
+    // Método auxiliar para calcular los puntos basados en los conteos.
     private static Puntos getPuntos(Map<String, Integer> conteoValores, Map<String, Integer> conteoFamilias) {
         Puntos puntos = new Puntos();
+        // Puntos por valores (pares o tríos).
         for (Map.Entry<String, Integer> entry : conteoValores.entrySet()) {
             int conteo = entry.getValue();
             if (conteo == 2) {
@@ -175,6 +173,7 @@ public class Juego {
                 puntos.agregarPuntosValor(6, entry.getKey());
             }
         }
+        // Puntos por familias (pares o tríos).
         for (Map.Entry<String, Integer> entry : conteoFamilias.entrySet()) {
             int conteo = entry.getValue();
             if (conteo == 2) {
@@ -186,4 +185,3 @@ public class Juego {
         return puntos;
     }
 }
-
